--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
             <div>Taipei, Taiwan</div>
           </div>
           <div class="social-icons">
-            <a href="" class="btn-circle" style="background: #4E2779"><i class="fa fa-github-alt" aria-hidden="true"></i></a>
-            <a href="" class="btn-circle" style="background: #2664BE"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+            <a href="https://github.com/smallwordWISH" class="btn-circle" style="background: #4E2779" target="_blank"><i class="fa fa-github-alt" aria-hidden="true"></i></a>
+            <a href="" class="btn-circle" style="background: #2664BE" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
           </div>
         </div>
         <div class="avatar-box">
@@ -126,8 +126,8 @@
           <div class="timeline-badge success"><i class="fa fa-desktop"></i></div>
           <div class="timeline-panel">
             <div class="timeline-heading">
-              <h3>Computer Science CS50</h3>
-              <h4>Harvard University, 2016-2017</h4>
+              <h3>Computer Science CS50x</h3>
+              <h4>Harvard University Oline Program, 2016-2017</h4>
             </div>
             <div class="timeline-body">
               <p>Topics include abstraction, algorithms, data structures, encapsulation, resource management, security, software engineering, and web development. Languages include C, Python, SQL, and JavaScript plus CSS and HTML. Problem sets inspired by real-world domains of biology, cryptography, finance, forensics, and gaming.</p>
@@ -222,40 +222,100 @@
   <section class="works" id="portfolio">
     <div class="container">
       <h2>Portfolio</h2>
-      <div class="work-items ">
+      <div class="work-items">
         <div class="work-item">
-          <a href="https://simple-twitter-sw.herokuapp.com/users/sign_in"><img src="./images/simple-twitter.png" alt="work-1"></a>
+          <div class="img-box"><img src="./images/khroma.png" alt="work-1"></div>
+          <div class="item-overlay">
+            <h3>Khroma</h3>
+            <ol>
+              <li>Color suggestions website for dressing.</li>
+              <li>Contribute to all of the front-end styling.</li>
+              <li>Controller modifying to meet front-end requirements.</li>
+            </ol>
+            <div class="work-icons">
+              <a href="https://github.com/kansetsu7/khroma" class="btn-circle" style="background: #4E2779" target="_blank"><i class="fa fa-github-alt" aria-hidden="true"></i></a>
+              <a href="https://www.khroma-go.com/" class="btn-circle" style="background: #2664BE" target="_blank"><i class="fa fa-external-link" aria-hidden="true"></i></a>
+            </div>            
+          </div>
+        </div>
+        <div class="work-item">
+          <div class="img-box"><img src="./images/simple-twitter.png" alt="work-2"></div>
           <div class="item-overlay">
             <h3>Simple Twitter</h3>
-            <p>Build a clone twitter</p>
+            <ol>
+              <li>Build a clone twitter by RoR.</li>
+              <li>Tweet, reply, follow, like features.</li>
+              <li>AJAX including infinite scroll.</li>
+              <li>Front-end styling including RWD.</li>
+            </ol>
+            <div class="work-icons">
+              <a href="https://github.com/smallwordWISH/simple-twitter" class="btn-circle" style="background: #4E2779" target="_blank"><i class="fa fa-github-alt" aria-hidden="true"></i></a>
+              <a href="https://simple-twitter-sw.herokuapp.com/" class="btn-circle" style="background: #2664BE" target="_blank"><i class="fa fa-external-link" aria-hidden="true"></i></a>
+            </div>      
           </div>
         </div>
         <div class="work-item">
-          <a href="https://restaurant-forum-sw.herokuapp.com/"><img src="./images/restaurant-forum.png" alt="work-2"></a>
+          <div class="img-box"><img src="./images/west_world_shop.png" alt="work-3"></div>
+          <div class="item-overlay">
+            <h3>West World Shop</h3>
+            <ol>
+              <li>Build an online retailer shop by RoR.</li>
+              <li>Cokkie session records cart items.</li>
+              <li>Online payment system with Spgateway API.</li>
+              <li>AJAX cart cotents and SASS.</li>
+            </ol>
+            <div class="work-icons">
+              <a href="https://github.com/smallwordWISH/west_world_shop" class="btn-circle" style="background: #4E2779" target="_blank"><i class="fa fa-github-alt" aria-hidden="true"></i></a>
+              <a href="https://west-world-shop-sw.herokuapp.com/" class="btn-circle" style="background: #2664BE" target="_blank"><i class="fa fa-external-link" aria-hidden="true"></i></a>
+            </div>
+          </div> 
+        </div>
+        <div class="work-item">
+          <div class="img-box"><img src="./images/legend-forum.png" alt="work-3"></div>
+          <div class="item-overlay">
+            <h3>Legend Forum</h3>
+            <ol>
+              <li>Build a forum with by RoR.</li>
+              <li>Friendship and privacy system: User can set privacy of post and filter who can see by friendship.</li>
+              <li>AJAX posts order by filter.</li>
+              <li>Web API for clients.</li>
+              <li>GCP deployment.</li>
+            </ol>
+            <div class="work-icons">
+              <a href="https://github.com/smallwordWISH/legend-forum-sw" class="btn-circle" style="background: #4E2779" target="_blank"><i class="fa fa-github-alt" aria-hidden="true"></i></a>
+              <a href="http://35.194.185.223/" class="btn-circle" style="background: #2664BE" target="_blank"><i class="fa fa-external-link" aria-hidden="true"></i></a>
+            </div>
+          </div> 
+        </div>
+        <div class="work-item">
+          <div class="img-box"><img src="./images/restaurant-forum.png" alt="work-5"></div>
           <div class="item-overlay">
             <h3>Restaurant Forum</h3>
-            <p>Build a clone twitter</p>
-          </div>
+            <ol>
+              <li>Build a restaurant forum by RoR.</li>
+              <li>Comment, favorite, like, ranking, feeds, follow and friendship features.</li>
+              <li>RWD.</li>
+            </ol>
+            <div class="work-icons">
+              <a href="https://github.com/smallwordWISH/restaurant_forum" class="btn-circle" style="background: #4E2779" target="_blank"><i class="fa fa-github-alt" aria-hidden="true"></i></a>
+              <a href="https://restaurant-forum-sw.herokuapp.com/" class="btn-circle" style="background: #2664BE" target="_blank"><i class="fa fa-external-link" aria-hidden="true"></i></a>
+            </div>
+          </div> 
         </div>
         <div class="work-item">
-          <a href="https://to-do-list-ajax-sw.herokuapp.com/"><img src="./images/to-do-list.png" alt="work-3"></a>
+          <div class="img-box"><img src="./images/to-do-list.png" alt="work-6"></div>
           <div class="item-overlay">
-            <h3>Todo List</h3>
-            <p>Build a clone twitter</p>
+            <h3>To Do List</h3>
+            <ol>
+              <li>Build a to do list by RoR.</li>
+              <li>AJAX for all features: create, check, edit, update and destory.</li>
+              <li>New to do will list in its date section order by date and time.</li>
+            </ol>
+            <div class="work-icons">
+              <a href="https://github.com/smallwordWISH/to_do_list_ajax" class="btn-circle" style="background: #4E2779" target="_blank"><i class="fa fa-github-alt" aria-hidden="true"></i></a>
+              <a href="https://to-do-list-ajax-sw.herokuapp.com/" class="btn-circle" style="background: #2664BE" target="_blank"><i class="fa fa-external-link" aria-hidden="true"></i></a>
+            </div>
           </div>
-        </div>
-        <div class="work-item">
-          <a href=""><img src="https://via.placeholder.com/600X540" alt="work-4"></a>
-          <div class="item-overlay">
-            <h3>Todo List</h3>
-            <p>Build a clone twitter</p>
-          </div>
-        </div>
-        <div class="work-item">
-          <a href=""><img src="https://via.placeholder.com/600X540" alt="work-6"></a>
-        </div>
-        <div class="work-item">
-          <a href=""><img src="https://via.placeholder.com/600X540" alt="work-6"></a>
         </div>
       </div>
     </div>
