add content on timeline

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           </div>
           <div class="social-icons">
             <a href="https://github.com/smallwordWISH" class="btn-circle" style="background: #4E2779" target="_blank"><i class="fa fa-github-alt" aria-hidden="true"></i></a>
-            <a href="" class="btn-circle" style="background: #2664BE" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+            <a href="https://www.linkedin.com/in/ying-tzu-chen-ba9a08116" class="btn-circle" style="background: #2664BE" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
           </div>
         </div>
         <div class="avatar-box">
@@ -74,7 +74,7 @@
             <a href="" class="shadow-box">download CV</a>
           </div>
           <div class="contact-me-btn">
-            <a href="" class="shadow-box">contact me</a>
+            <a href="mailto:word714@gmail.com" class="shadow-box">contact me</a>
           </div>
         </div>
       </div>
@@ -118,7 +118,7 @@
             </div>
             <div class="timeline-body">
               <p>I was trained and became experienced engineer with broad-based knowledge of mechanical materials and manufacturing process technologies int this time. I performed strong ability in troubleshooting and logical reasoning. Also had excellent communication skills with experience in ME/PM/ID/sourcer, factory-end, and supplier relations.</p>
-              <span class="more-btn"><i class="fa fa-ellipsis-h"></i></span>
+              <span class="more-btn-asus"><i class="fa fa-ellipsis-h"></i></span>
             </div>
           </div>
         </li>
@@ -138,11 +138,12 @@
           <div class="timeline-badge primary"><i class="fa fa-globe"></i></div>
           <div class="timeline-panel">
             <div class="timeline-heading">
-              <h3>Full-stack Web Engineer Programe</h3>
+              <h3>Full-stack Web Engineer Program</h3>
               <h4>Alpha Camp, 2017-2018</h4>
             </div>
             <div class="timeline-body">
-              <p>Training skills include </p>
+              <p>Full-stack web deployment training, also included products design thinking. I completed numbers of projects such as forum, clone twitter, online retailer website and other web APPs. Our team designed color suggestions website for dressing, and got well praise on demo day.</p>
+              <span class="more-btn-ac"><i class="fa fa-ellipsis-h"></i></span>
             </div>
           </div>
         </li>
@@ -160,7 +161,7 @@
         </li>
       </ul>
       <div class="overlay-ee">
-        <div class="overlay-inner shadow-box ">
+        <div  id="asus-content" class="overlay-inner shadow-box">
           <div class="overlay-heading clearfix">
             <h3>Senior Mechnical Engineer </h3>
             <h4>ASUSTeK Computer Inc. 2012-2017</h4>
@@ -171,6 +172,19 @@
             <li>Resolved manufacturing process and treatment obstacles to improve the capability and texture of electronic products.</li>
             <li>Validated physical properties of raw materials and analyzed the failure causes of MP production by scientific instruments and methods.</li>
             <li>Coordinated with supplier to define raw materials and overall material manufacturing process flow to meet quality, reliability, cost, yield and manufacturability requirements.</li>
+          </ol>
+        </div>
+        <div  id="ac-content" class="overlay-inner shadow-box">
+          <div class="overlay-heading clearfix">
+            <h3>Full-stack Web Engineer Programe</h3>
+            <h4>Alpha Camp, 2017-2018</h4>
+          </div>
+          <span class="close-btn">&#10005;</span>
+          <ol>
+            <li>Back-end skills:&nbsp;&nbsp; Ruby on Rails, SQL, Object-Oriented Programming, Rspec, Web API, HEROKU, GCP.</li>
+            <li>Front-end skills:&nbsp;&nbsp; HTML, CSS, JavaScript, JQuery, JSON, AJAX, Bootstrap, RWD. </li>
+            <li>Products design thinking:&nbsp;&nbsp; User stories, ERD, Agile deployment. </li>
+            <li>Team work skills:&nbsp;&nbsp; git, github, Trello. </li>  
           </ol>
         </div>
       </div>
@@ -197,6 +211,11 @@
           <div class="skill-bar">
             <span class="percentage" style="width: 85%">
           </div>
+          <div class="skill-title">SASS</div>
+          <span class="percentage-number">75%</span>
+          <div class="skill-bar">
+            <span class="percentage" style="width: 75%">
+          </div>
         </div>
         <div>
           <div class="skill-title">JavaScript / JQuery</div>
@@ -204,10 +223,15 @@
           <div class="skill-bar">
             <span class="percentage" style="width: 80%">
           </div>
-          <div class="skill-title">JSON / Ajax</div>
-          <span class="percentage-number">75%</span>
+          <div class="skill-title">AJAX</div>
+          <span class="percentage-number">80%</span>
           <div class="skill-bar">
-            <span class="percentage" style="width: 75%">
+            <span class="percentage" style="width: 80%">
+          </div>
+          <div class="skill-title">RWD / CSS-grid</div>
+          <span class="percentage-number">85%</span>
+          <div class="skill-bar">
+            <span class="percentage" style="width: 85%">
           </div>        
           <div class="skill-title">React JS / Redux</div>
           <span class="percentage-number">70%</span>
@@ -325,12 +349,12 @@
     <div class="container">
       <h2>Contact</h2>
       <div class="contact-form shadow-box">
-        <form>
+        <form action="mailto:word714@gmail.com" method="post" enctype="text/plain">
           <div class="form-input">
             <input type="text" name="name" class="form-style" placeholder="name" required>
           </div>
           <div class="form-input">
-            <input type="email" name="email" class="form-style" placeholder="email">
+            <input type="email" name="email" class="form-style" placeholder="email" required>
           </div>
           <div class="form-input">
             <textarea name="textarea" id="message" cols="30" rows="10" placeholder="write message" required></textarea>
