--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
     <div class="container">
       <div class="shadow-box summary-content">
         <p class="text">
-          Hello! I'm Amber Chen. Experienced with all stages of the development cycle for dynamic web projects. Having an in-depth knowledge of front-end development skills including HTML5, CSS3, bootstrap, RWD, JSON, Ajax, JavaScript, JQuery, React JS, and back-end development skills including Ruby on Rails, SQL.
+          Hello! I'm Amber Chen. Experienced in all stages of the development cycle for dynamic web projects. Having an in-depth knowledge of front-end development skills including HTML5, CSS3, bootstrap, RWD, JSON, Ajax, JavaScript, JQuery, React JS, and back-end development skills including Ruby on Rails, SQL.
         </p>
         <div class="button-group">
           <div class="download-cv-btn">
-            <a href="" class="shadow-box">download CV</a>
+            <a href="https://drive.google.com/open?id=1glbeD7YW1TKzzOdnxqlLUHldnOLUHVkB" class="shadow-box">download CV</a>
           </div>
           <div class="contact-me-btn">
             <a href="mailto:word714@gmail.com" class="shadow-box">contact me</a>
@@ -184,7 +184,8 @@
             <li>Back-end skills:&nbsp;&nbsp; Ruby on Rails, SQL, Object-Oriented Programming, Rspec, Web API, HEROKU, GCP.</li>
             <li>Front-end skills:&nbsp;&nbsp; HTML, CSS, JavaScript, JQuery, JSON, AJAX, Bootstrap, RWD. </li>
             <li>Products design thinking:&nbsp;&nbsp; User stories, ERD, Agile deployment. </li>
-            <li>Team work skills:&nbsp;&nbsp; git, github, Trello. </li>  
+            <li>Team work skills:&nbsp;&nbsp; git, github, Trello. </li>
+            <li>I passed the examination and been approved to join the demo day team. Our team designed colors suggestions website for dressing, and got well praise on demo day.</li> 
           </ol>
         </div>
       </div>
@@ -253,7 +254,7 @@
             <h3>Khroma</h3>
             <ol>
               <li>Color suggestions website for dressing.</li>
-              <li>Contribute to all of the front-end styling.</li>
+              <li>Contribute to all of the front-end stylings.</li>
               <li>Controller modifying to meet front-end requirements.</li>
             </ol>
             <div class="work-icons">
@@ -284,9 +285,9 @@
             <h3>West World Shop</h3>
             <ol>
               <li>Build an online retailer shop by RoR.</li>
-              <li>Cokkie session records cart items.</li>
+              <li>Cookie session records cart items.</li>
               <li>Online payment system with Spgateway API.</li>
-              <li>AJAX cart cotents and SASS.</li>
+              <li>AJAX cart contents and SASS.</li>
             </ol>
             <div class="work-icons">
               <a href="https://github.com/smallwordWISH/west_world_shop" class="btn-circle" style="background: #4E2779" target="_blank"><i class="fa fa-github-alt" aria-hidden="true"></i></a>
@@ -300,7 +301,7 @@
             <h3>Legend Forum</h3>
             <ol>
               <li>Build a forum with by RoR.</li>
-              <li>Friendship and privacy system: User can set privacy of post and filter who can see by friendship.</li>
+              <li>Friendship and privacy system: User can set the privacy of post and filter who can see by friendship.</li>
               <li>AJAX posts order by filter.</li>
               <li>Web API for clients.</li>
               <li>GCP deployment.</li>
