--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         </p>
         <div class="button-group">
           <div class="download-cv-btn">
-            <a href="https://drive.google.com/open?id=1glbeD7YW1TKzzOdnxqlLUHldnOLUHVkB" class="shadow-box">download CV</a>
+            <a href="https://drive.google.com/open?id=1I61GRIzNcD4hb0RcbOOd-BU2IfoJfZS4" class="shadow-box" target="_blank">download CV</a>
           </div>
           <div class="contact-me-btn">
             <a href="mailto:word714@gmail.com" class="shadow-box">contact me</a>
@@ -168,7 +168,7 @@
           </div>
           <span class="close-btn">&#10005;</span>
           <ol>
-            <li>Scouted and benchmarked mechanical materials for smart phone, notebook, wearable devices and accessories.</li>
+            <li>Scouted and benchmarked mechanical materials for 3 smart phone projects, 15 notebook projects, 2 wearable device projects.</li>
             <li>Resolved manufacturing process and treatment obstacles to improve the capability and texture of electronic products.</li>
             <li>Validated physical properties of raw materials and analyzed the failure causes of MP production by scientific instruments and methods.</li>
             <li>Coordinated with supplier to define raw materials and overall material manufacturing process flow to meet quality, reliability, cost, yield and manufacturability requirements.</li>
