add react experience into resume

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <div class="container">
       <div class="shadow-box summary-content">
         <p class="text">
-          Hello! I'm Amber Chen. Experienced in all stages of the development cycle for dynamic web projects. Having an in-depth knowledge of front-end development skills including HTML5, CSS3, bootstrap, RWD, JSON, Ajax, JavaScript, JQuery, React JS, and back-end development skills including Ruby on Rails, SQL.
+          Hello! I'm Amber Chen. Experienced in all stages of the development cycle for dynamic web projects. Using React JS as my primary front-end developing framework. Having an in-depth knowledge of front-end development skills including React JS, JavaScript(ES6), jest, styled-components, Server-Side Render, WebSocket, RWD, SASS, JQuery, Ajax, Bootstrap, and back-end development skills including Ruby on Rails, RESTful API, SQL.
         </p>
         <div class="button-group">
           <div class="download-cv-btn">
@@ -101,7 +101,7 @@
           <div class="timeline-badge warning"><i class="fa fa-graduation-cap"></i></div>
           <div class="timeline-panel">
             <div class="timeline-heading">
-              <h3>Matrial Science</h3>
+              <h3>Material Science</h3>
               <h4>National Tsing Hua University<br />Master degree, 2010-2012</h4>
             </div>
             <div class="timeline-body">
@@ -113,12 +113,12 @@
           <div class="timeline-badge danger"><i class="fa fa-briefcase"></i></div>
           <div class="timeline-panel">
             <div class="timeline-heading">
-              <h3>Senior Mechnical Engineer </h3>
+              <h3>Senior Mechanical Engineer</h3>
               <h4>ASUSTeK Computer Inc. 2012-2017</h4>
             </div>
             <div class="timeline-body">
               <p>I was trained and became experienced engineer with broad-based knowledge of mechanical materials and manufacturing process technologies int this time. I performed strong ability in troubleshooting and logical reasoning. Also had excellent communication skills with experience in ME/PM/ID/sourcer, factory-end, and supplier relations.</p>
-              <span class="more-btn-asus"><i class="fa fa-ellipsis-h"></i></span>
+              <span class="more-btn-asus more-btn"><i class="fa fa-ellipsis-h"></i></span>
             </div>
           </div>
         </li>
@@ -143,7 +143,7 @@
             </div>
             <div class="timeline-body">
               <p>Full-stack web deployment training, also included products design thinking. I completed numbers of projects such as forum, clone twitter, online retailer website and other web APPs. Our team designed color suggestions website for dressing, and got well praise on demo day.</p>
-              <span class="more-btn-ac"><i class="fa fa-ellipsis-h"></i></span>
+              <span class="more-btn-ac more-btn"><i class="fa fa-ellipsis-h"></i></span>
             </div>
           </div>
         </li>
@@ -151,11 +151,12 @@
           <div class="timeline-badge info"><i class="fa fa-play"></i></div>
           <div class="timeline-panel">
             <div class="timeline-heading">
-              <h3>IMPACT program</h3>
-              <h4>Taipei National Art University, 2016-2018</h4>
+              <h3>Front-end Engineer</h3>
+              <h4>Starcloud Tek.(星輝科技), 2018-present</h4>
             </div>
             <div class="timeline-body">
-              <p>Post-bechelor program for digital music producing technolgy. Learning arrangement, rechording and mixing skills.</p>
+              <p>Using React JS to build a new SPA website for cryptocurrency trading platform, including RWD for portable devices. The new website replaced the origin traditional website, and achieved 150% of user growth.</p>
+              <span class="more-btn-bitasiaex more-btn" style="float: right"><i class="fa fa-ellipsis-h"></i></span>
             </div>
           </div>
         </li>
@@ -163,7 +164,7 @@
       <div class="overlay-ee">
         <div  id="asus-content" class="overlay-inner shadow-box">
           <div class="overlay-heading clearfix">
-            <h3>Senior Mechnical Engineer </h3>
+            <h3>Senior Mechanical Engineer</h3>
             <h4>ASUSTeK Computer Inc. 2012-2017</h4>
           </div>
           <span class="close-btn">&#10005;</span>
@@ -176,7 +177,7 @@
         </div>
         <div  id="ac-content" class="overlay-inner shadow-box">
           <div class="overlay-heading clearfix">
-            <h3>Full-stack Web Engineer Programe</h3>
+            <h3>Full-stack Web Engineer Program</h3>
             <h4>Alpha Camp, 2017-2018</h4>
           </div>
           <span class="close-btn">&#10005;</span>
@@ -188,6 +189,20 @@
             <li>I passed the examination and been approved to join the demo day team. Our team designed colors suggestions website for dressing, and got well praise on demo day.</li> 
           </ol>
         </div>
+        <div  id="bitasiaex-content" class="overlay-inner shadow-box">
+          <div class="overlay-heading clearfix">
+            <h3>Front-end Engineer</h3>
+            <h4>Starcloud Tek.(星輝科技), 2018-present</h4>
+          </div>
+          <span class="close-btn">&#10005;</span>
+          <ol>
+            <li>Using React JS to build a new SPA website for cryptocurrency trading platform, including RWD for portable devices. The new website replaced the origin traditional website, and achieved 150% of user growth.</li>
+            <li>Using Server-Side Render to improve SEO and achieve tracking code implementing.</li>
+            <li>WebSocket </li>
+            <li></li>
+            <li></li> 
+          </ol>
+        </div>
       </div>
     </div>
   </section>
@@ -197,47 +212,57 @@
       <h2>Skills</h2>
       <div class="skill-panel shadow-box ">
         <div>
-          <div class="skill-title">Ruby on Rails</div>
-          <span class="percentage-number">85%</span>
-          <div class="skill-bar">
-            <span class="percentage" style="width: 85%">
-          </div>
-          <div class="skill-title">HTML5</div>
+          <div class="skill-title">React JS / Redux</div>
           <span class="percentage-number">90%</span>
           <div class="skill-bar">
             <span class="percentage" style="width: 90%">
           </div>
-          <div class="skill-title">CSS3</div>
-          <span class="percentage-number">85%</span>
-          <div class="skill-bar">
-            <span class="percentage" style="width: 85%">
-          </div>
-          <div class="skill-title">SASS</div>
-          <span class="percentage-number">75%</span>
-          <div class="skill-bar">
-            <span class="percentage" style="width: 75%">
-          </div>
-        </div>
-        <div>
-          <div class="skill-title">JavaScript / JQuery</div>
+          <div class="skill-title">styled-components</div>
           <span class="percentage-number">80%</span>
           <div class="skill-bar">
             <span class="percentage" style="width: 80%">
           </div>
-          <div class="skill-title">AJAX</div>
-          <span class="percentage-number">80%</span>
-          <div class="skill-bar">
-            <span class="percentage" style="width: 80%">
-          </div>
-          <div class="skill-title">RWD / CSS-grid</div>
-          <span class="percentage-number">85%</span>
-          <div class="skill-bar">
-            <span class="percentage" style="width: 85%">
-          </div>        
-          <div class="skill-title">React JS / Redux</div>
+          <div class="skill-title">Jest</div>
           <span class="percentage-number">70%</span>
           <div class="skill-bar">
             <span class="percentage" style="width: 70%">
+          </div>
+          <div class="skill-title">Server-Side Render</div>
+          <span class="percentage-number">70%</span>
+          <div class="skill-bar">
+            <span class="percentage" style="width: 70%">
+          </div>
+          <div class="skill-title">WebSocket</div>
+          <span class="percentage-number">80%</span>
+          <div class="skill-bar">
+            <span class="percentage" style="width: 80%">
+          </div>
+        </div>
+        <div>
+          <div class="skill-title">JavaScript(ES6)</div>
+          <span class="percentage-number">90%</span>
+          <div class="skill-bar">
+            <span class="percentage" style="width: 90%">
+          </div>
+          <div class="skill-title">SASS</div>
+          <span class="percentage-number">90%</span>
+          <div class="skill-bar">
+            <span class="percentage" style="width: 90%">
+          </div>
+          <div class="skill-title">JQuery</div>
+          <span class="percentage-number">85%</span>
+          <div class="skill-bar">
+            <span class="percentage" style="width: 85%">
+          </div>  
+          <div class="skill-title">AJAX</div>
+          <span class="percentage-number">85%</span>
+          <div class="skill-bar">
+            <span class="percentage" style="width: 85%">
+          </div>  
+          <div class="skill-title">Ruby on Rails</div>
+          <span class="percentage-number">85%</span>
+          <div class="skill-bar">
+            <span class="percentage" style="width: 85%">
           </div>
         </div>
       </div>      
@@ -248,6 +273,19 @@
     <div class="container">
       <h2>Portfolio</h2>
       <div class="work-items">
+        <div class="work-item">
+          <div class="img-box"><img src="./images/bitasiaex.png" alt="work-1"></div>
+          <div class="item-overlay">
+            <h3>BitAsiaEx Cryptocurrency Trading Platform</h3>
+            <ol>
+              <li>Develop by React/ Redux framwork.</li>
+              <li>Contribute 60% of features and style, including Market Basic, Order Management, Mining, User/ Security/ Help Center, Home Page, Signup and Login.</li>
+            </ol>
+            <div class="work-icons">
+              <a href="https://www.bitasiaex.com/" class="btn-circle" style="background: #2664BE" target="_blank"><i class="fa fa-external-link" aria-hidden="true"></i></a>
+            </div>            
+          </div>
+        </div>
         <div class="work-item">
           <div class="img-box"><img src="./images/khroma.png" alt="work-1"></div>
           <div class="item-overlay">
@@ -371,7 +409,7 @@
   <footer id="footer">
     <div class="container">
       <div class="footer-content">
-        <p>&copy; 2018 Ying Tzu Chen | All Rights Reserved.</p>
+        <p>&copy; 2019 Ying Tzu Chen | All Rights Reserved.</p>
         <div class="footer-social-icon">
         </div>
       </div>
