add bitasia experience and change display order

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <ul class="nav">
           <li><a href="#home">home</a></li>
           <li><a href="#about">about</a></li>
-          <li><a href="#eduction-experience">Education & Experience</a></li>
+          <li><a href="#eduction-experience">Experience & Education</a></li>
           <li><a href="#skills">skills</a></li>
           <li><a href="#portfolio">portfolio</a></li>
           <li><a href="#contact">contact</a></li>
@@ -41,7 +41,7 @@
       <div id="v-card" class="shadow-box">
         <div class="personal-info">
           <div class="name shadow-text">Amber Chen</div>
-          <h3 class="shadow-text">Full-stack Web Developer</h3>
+          <h3 class="shadow-text">Front-end Web Developer</h3>
           <div class="profile-list">
             <div class="title"><i class="fa fa-envelope "></i></div>
             <div>word714@gmail.com</div>
@@ -83,58 +83,22 @@
   <!--  eduction-experience -->
   <section id="eduction-experience">
     <div class="container">
-      <h2>Education & Experience</h2>
+      <h2>Experience & Education</h2>
       <ul class="timeline">
         <li class="timeline-forwrad">
-          <div class="timeline-badge primary"><i class="fa fa-graduation-cap"></i></div>
+          <div class="timeline-badge info"><i class="fa fa-play"></i></div>
           <div class="timeline-panel">
             <div class="timeline-heading">
-              <h3>Engineering and System Science</h3>
-              <h4>National Tsing Hua University<br />Bachelor degree, 2006 -2010</h4>
+              <h3>Front-end Engineer</h3>
+              <h4>Starcloud Tek.(星輝科技), 2018-present</h4>
             </div>
             <div class="timeline-body">
-              <p>Including electrical engineering, mechenical engineering, material science and computer science.  </p>
+              <p>Using React JS to build a new SPA website for cryptocurrency trading platform, including RWD for portable devices. The new website replaced the origin traditional website, and achieved 150% of user growth.</p>
+              <span class="more-btn-bitasiaex more-btn" style="float: right"><i class="fa fa-ellipsis-h"></i></span>
             </div>
           </div>
         </li>
         <li class="timeline-inverted">
-          <div class="timeline-badge warning"><i class="fa fa-graduation-cap"></i></div>
-          <div class="timeline-panel">
-            <div class="timeline-heading">
-              <h3>Material Science</h3>
-              <h4>National Tsing Hua University<br />Master degree, 2010-2012</h4>
-            </div>
-            <div class="timeline-body">
-              <p></p>
-            </div>
-          </div>
-        </li>
-        <li class="timeline-forwrad">
-          <div class="timeline-badge danger"><i class="fa fa-briefcase"></i></div>
-          <div class="timeline-panel">
-            <div class="timeline-heading">
-              <h3>Senior Mechanical Engineer</h3>
-              <h4>ASUSTeK Computer Inc. 2012-2017</h4>
-            </div>
-            <div class="timeline-body">
-              <p>I was trained and became experienced engineer with broad-based knowledge of mechanical materials and manufacturing process technologies int this time. I performed strong ability in troubleshooting and logical reasoning. Also had excellent communication skills with experience in ME/PM/ID/sourcer, factory-end, and supplier relations.</p>
-              <span class="more-btn-asus more-btn"><i class="fa fa-ellipsis-h"></i></span>
-            </div>
-          </div>
-        </li>
-        <li class="timeline-inverted">
-          <div class="timeline-badge success"><i class="fa fa-desktop"></i></div>
-          <div class="timeline-panel">
-            <div class="timeline-heading">
-              <h3>Computer Science CS50x</h3>
-              <h4>Harvard University Oline Program, 2016-2017</h4>
-            </div>
-            <div class="timeline-body">
-              <p>Topics include abstraction, algorithms, data structures, encapsulation, resource management, security, software engineering, and web development. Languages include C, Python, SQL, and JavaScript plus CSS and HTML. Problem sets inspired by real-world domains of biology, cryptography, finance, forensics, and gaming.</p>
-            </div>
-          </div>
-        </li>
-        <li class="timeline-forwrad">
           <div class="timeline-badge primary"><i class="fa fa-globe"></i></div>
           <div class="timeline-panel">
             <div class="timeline-heading">
@@ -147,16 +111,52 @@
             </div>
           </div>
         </li>
-        <li class="timeline-inverted">
-          <div class="timeline-badge info"><i class="fa fa-play"></i></div>
+        <li class="timeline-forwrad">
+          <div class="timeline-badge success"><i class="fa fa-desktop"></i></div>
           <div class="timeline-panel">
             <div class="timeline-heading">
-              <h3>Front-end Engineer</h3>
-              <h4>Starcloud Tek.(星輝科技), 2018-present</h4>
+              <h3>Computer Science CS50x</h3>
+              <h4>Harvard University Oline Program, 2016-2017</h4>
             </div>
             <div class="timeline-body">
-              <p>Using React JS to build a new SPA website for cryptocurrency trading platform, including RWD for portable devices. The new website replaced the origin traditional website, and achieved 150% of user growth.</p>
-              <span class="more-btn-bitasiaex more-btn" style="float: right"><i class="fa fa-ellipsis-h"></i></span>
+              <p>Topics include abstraction, algorithms, data structures, encapsulation, resource management, security, software engineering, and web development. Languages include C, Python, SQL, and JavaScript plus CSS and HTML. Problem sets inspired by real-world domains of biology, cryptography, finance, forensics, and gaming.</p>
+            </div>
+          </div>
+        </li>
+        <li class="timeline-inverted">
+          <div class="timeline-badge danger"><i class="fa fa-briefcase"></i></div>
+          <div class="timeline-panel">
+            <div class="timeline-heading">
+              <h3>Senior Mechanical Engineer</h3>
+              <h4>ASUSTeK Computer Inc. 2012-2017</h4>
+            </div>
+            <div class="timeline-body">
+              <p>I was trained and became experienced engineer with broad-based knowledge of mechanical materials and manufacturing process technologies int this time. I performed strong ability in troubleshooting and logical reasoning. Also had excellent communication skills with experience in ME/PM/ID/sourcer, factory-end, and supplier relations.</p>
+              <span class="more-btn-asus more-btn"><i class="fa fa-ellipsis-h"></i></span>
+            </div>
+          </div>
+        </li>
+        <li class="timeline-forwrad">
+          <div class="timeline-badge warning"><i class="fa fa-graduation-cap"></i></div>
+          <div class="timeline-panel">
+            <div class="timeline-heading">
+              <h3>Material Science</h3>
+              <h4>National Tsing Hua University<br />Master degree, 2010-2012</h4>
+            </div>
+            <div class="timeline-body">
+              <p></p>
+            </div>
+          </div>
+        </li>
+        <li class="timeline-inverted">
+          <div class="timeline-badge primary"><i class="fa fa-graduation-cap"></i></div>
+          <div class="timeline-panel">
+            <div class="timeline-heading">
+              <h3>Engineering and System Science</h3>
+              <h4>National Tsing Hua University<br />Bachelor degree, 2006 -2010</h4>
+            </div>
+            <div class="timeline-body">
+              <p>Including electrical engineering, mechenical engineering, material science and computer science.  </p>
             </div>
           </div>
         </li>
@@ -196,11 +196,11 @@
           </div>
           <span class="close-btn">&#10005;</span>
           <ol>
-            <li>Using React JS to build a new SPA website for cryptocurrency trading platform, including RWD for portable devices. The new website replaced the origin traditional website, and achieved 150% of user growth.</li>
-            <li>Using Server-Side Render to improve SEO and achieve tracking code implementing.</li>
-            <li>WebSocket </li>
-            <li></li>
-            <li></li> 
+            <li>Use React JS to build a new SPA website for cryptocurrency trading platform, including RWD for portable devices. The new website replaced the origin traditional website, and achieved 150% of user growth.</li>
+            <li>Contribute 60% of features and style in the website production, including Market Basic, Order Management, Mining, User/Security/Help Center, Home Page, Signup and Login.</li>
+            <li>Use Server-Side Render to improve SEO and achieve tracking code implementing.</li>
+            <li>WebSocket connect server to achieve instant data exchange and improve user experience.</li>
+            <li>Build NodeJS server to produce FB share contents and resolve html meta tags can not be identified issue.</li> 
           </ol>
         </div>
       </div>
