change cv download href

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         </p>
         <div class="button-group">
           <div class="download-cv-btn">
-            <a href="https://drive.google.com/open?id=1I61GRIzNcD4hb0RcbOOd-BU2IfoJfZS4" class="shadow-box" target="_blank">download CV</a>
+            <a href="https://drive.google.com/file/d/1I61GRIzNcD4hb0RcbOOd-BU2IfoJfZS4/view?usp=sharing" class="shadow-box" target="_blank">download CV</a>
           </div>
           <div class="contact-me-btn">
             <a href="mailto:word714@gmail.com" class="shadow-box">contact me</a>
