--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
           <div class="timeline-badge info"><i class="fa fa-play"></i></div>
           <div class="timeline-panel">
             <div class="timeline-heading">
-              <h3>Senior Frontend Engineer</h3>
+              <h3>Frontend Engineer</h3>
               <h4>Breaktime Inc.(鴻海富盈數據), 2019-present</h4>
             </div>
             <div class="timeline-body">
@@ -249,7 +249,7 @@
         </div>
         <div id="breaktime-content" class="overlay-inner shadow-box">
           <div class="overlay-heading clearfix">
-            <h3>Front-end Engineer</h3>
+            <h3>Frontend Engineer</h3>
             <h4>Breaktime Inc.(鴻海富盈數據), 2019-present</h4>
           </div>
           <span class="close-btn">&#10005;</span>
@@ -260,7 +260,6 @@
             <li>Use ReactJS to build a new SPA website for the publisher, including RWD for portable devices.
               Contribute 100% of features and the style in the website production, using the latest React skills
               including React-Saga, React-Hook, and RxJS.</li>
-
             </li>
           </ol>
         </div>
