--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <p class="text">
           Hello! I'm Amber Chen. Experienced in all stages of the development cycle for dynamic web projects. Using
           React JS as my primary front-end developing framework. Having an in-depth knowledge of front-end development
-          skills including React JS, Redux, JavaScript(ES6), Native JavaScript, Saga, RxJS, styled-components,
+          skills including React JS, Redux, JavaScript(ES6), Native JavaScript, Saga, RxJS, styled-components, React Native,
           Server-Side Render, WebSocket, RWD, SASS, JQuery, Ajax, Bootstrap, and back-end development skills including
           Ruby on Rails, RESTful API, SQL.
         </p>
@@ -259,7 +259,7 @@
               collecting millions of data each month.</li>
             <li>Use ReactJS to build a new SPA website for the publisher, including RWD for portable devices.
               Contribute 100% of features and the style in the website production, using the latest React skills
-              including React-Saga, React-Hook, and RxJS.</li>
+              including React-Saga, React-Hook, and RxJS. Deploy stage environment server with Nginx on GCP.</li>
             </li>
           </ol>
         </div>
@@ -297,7 +297,7 @@
           <div class="skill-bar">
             <span class="percentage" style="width: 80%">
           </div>
-          <div class="skill-title">Jest</div>
+          <div class="skill-title">React Native</div>
           <span class="percentage-number">70%</span>
           <div class="skill-bar">
             <span class="percentage" style="width: 70%">
@@ -314,10 +314,10 @@
           <div class="skill-bar">
             <span class="percentage" style="width: 90%">
           </div>
-          <div class="skill-title">JQuery</div>
-          <span class="percentage-number">85%</span>
+          <div class="skill-title">Jest</div>
+          <span class="percentage-number">70%</span>
           <div class="skill-bar">
-            <span class="percentage" style="width: 85%">
+            <span class="percentage" style="width: 70%">
           </div>
           <div class="skill-title">Server-Side Render</div>
           <span class="percentage-number">70%</span>
