--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
             <div class="work-icons">
               <a href="https://github.com/kansetsu7/khroma" class="btn-circle" style="background: #4E2779"
                 target="_blank"><i class="fa fa-github-alt" aria-hidden="true"></i></a>
-              <a href="https://www.khroma-go.com/" class="btn-circle" style="background: #2664BE" target="_blank"><i
+              <a href="http://34.80.167.24" class="btn-circle" style="background: #2664BE" target="_blank"><i
                   class="fa fa-external-link" aria-hidden="true"></i></a>
             </div>
           </div>
@@ -444,7 +444,7 @@
             <div class="work-icons">
               <a href="https://github.com/smallwordWISH/legend-forum-sw" class="btn-circle" style="background: #4E2779"
                 target="_blank"><i class="fa fa-github-alt" aria-hidden="true"></i></a>
-              <a href="http://35.194.185.223/" class="btn-circle" style="background: #2664BE" target="_blank"><i
+              <a href="http://35.229.129.21/" class="btn-circle" style="background: #2664BE" target="_blank"><i
                   class="fa fa-external-link" aria-hidden="true"></i></a>
             </div>
           </div>
